# cxx_adc_2023_day1_example

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.in  README.md  vcpkg.json
CMake-gtkmm/: CMake-gtkmm.cpp  CMake-gtkmm.h  CMakeLists.txt
cmake-gtkmm/: CMakeLists.txt  cmake-gtkmm.cpp  cmake-gtkmm.h
